build should run now